--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": "stylelint-config-recommended-scss"
+  "extends": [
+    "stylelint-config-recommended",
+    "stylelint-config-prettier"
+  ],
+  "ignoreFiles": [
+    "/public/**",
+    "/resources/**",
+    "node_modules"
+  ]
 }
