--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "renderToDisk:production": "npm run renderToDisk -- --minify --environment production",
     "npm-check": "npx npm-check -u",
     "hugo version": "hugo version",
-    "check": "",
-    "check:prettier": "prettier --check .",
-    "lint:stylelint": "stylelint \"**/*.{css,sass,scss}\"",
+    "lint:stylelint": "stylelint --fix \"**/*.{css,sass,scss}\" ",
     "lint:prettier": "prettier --write .",
-    "lint:eslint": "eslint --fix",
+    "lint:eslint": "eslint --fix .",
     "lint": "npm run lint:stylelint && npm run lint:prettier && npm run lint:eslint"
   },
   "husky": {
@@ -41,12 +39,12 @@
   "devDependencies": {
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-go-template": "^0.0.13",
     "stylelint": "^14.9.1",
-    "stylelint-config-recommended-scss": "^6.0.0"
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^8.0.0"
   }
 }
