fix: add double quote override

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,6 +5,12 @@
       "options": {
         "parser": "go-template"
       }
+    },
+    {
+      "files": ["*.html", "*.css", "*.scss", "*.sass", "*.less"],
+      "options": {
+        "singleQuote": false
+      }
     }
   ],
   "singleQuote": true
